tests/compiler_errors/name_redefinitions/mem_redef_fn.tlp
fn foo do end
reserve foo 1 end 